2006-10-04  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.defs
	* plug-ins/pygimp/gimpui.override: new style constructors for
	GimpColorButton and GimpColorScale.

2006-10-04  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrushgenerated-load.c
	* app/core/gimpgradient-load.c
	* app/core/gimppalette-load.c
	* app/core/gimppalette-save.c: read and write all files in binary
	mode. Improved parser error messages (added line numbers). Minor
	changes to simply read DOS files instead of barfing on them.

2006-10-04  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c: unset scroll-lock (bug #359548).

2006-10-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/maze/maze_face.c: minor code cleanup.

2006-10-03  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c: a FALSE return from
	gimp_drawable_mask_bounds() doesn't mean failure. Restore old
	behavior. Fixes bug #357223.

2006-10-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/dialogs/offset-dialog.c:  apply patch from David
	Gowers, with minor cleanups, to use item dimensions rather
	than image dimensions; fixes bug #358322.
	
2006-10-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/tools-enums.[ch]: change labels for transform
	type enum.

	* app/tools/gimpmoveoptions.c:
	* app/tools/gimptransformoptions.c:  change "Affect:" to
	"Move:" or "Transform:", respectively.  Fixes bug #358824.
	
2006-10-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpimage-convert.c
	(median_cut_pass2_nodestruct_dither_rgb): adjust alpha-dithering
	and make code more readable; fixes bug #358851 as suggested
	by Tor Lillqvist.
	
2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette-load.[ch]: added
	gimp_palette_load_detect_format().

	* app/core/gimppalette-import.c: removed it here. Also removed all
	file I/O related includes.

2006-10-03  Michael Natterer  <mitch@gimp.org>
